# coding-rule2

./: .claude-project  .cursor  .cursor-claude-sync.json  .env.example  .gitignore  .idea  .mcp.json  .mcp.json.template  .shell_integration.zsh  .spellright.json  .vscode 2  AI_INTERACTIONS_LOG.md  CLAUDE.md  EMERGENCY_FIXES_IMPLEMENTATION.md  FILE_OPERATIONS_LOG.md  LICENSE  MISTAKE_79_PREVENTION_REPORT.md  PRODUCT_SPECIFICATION.md  PROJECT_FILE_ORGANIZATION_RULES.md  README-improved.md  README.md  SECURITY.md  WORKER1_FINAL_QUALITY_REPORT.md  ai-team.sh  auto-update-checker.sh  claude-cursor-sync.sh  claude-restart-checklist.md  cspell.json  pyproject.toml  quick-install.sh  quick-memory-check.sh  requirements.txt  secure-setup.sh  setup-ai-dev.sh  setup.sh  start-with-hooks.sh  test-memory-inheritance.sh
.cursor/: rules  rules.md
.dev/: readme.md
.githooks.disabled/: pre-create
ai-agents/: AI_ORGANIZATION_GOVERNANCE.md  AUTONOMOUS_GROWTH_SYSTEM.sh  AUTO_EXECUTE_MONITOR_SYSTEM.sh  CLAUDE_MCP_BRIDGE.py  COMPREHENSIVE_COORDINATION_SYSTEM.md  COORDINATION_CONTROL_SYSTEM.md  CRITICAL_FACTS.md  EMERGENCY_REVOLUTION_IMPLEMENTATION.md  LOG_VALIDATOR.sh  MANDATORY_RULES.md  NEXT_GENERATION_INFRASTRUCTURE_DESIGN.md  PATH_MANAGEMENT_SYSTEM.sh  README.md  REALTIME_SYNC_DAEMON.py  RESOURCE_EFFICIENT_MONITORING_REPORT.md  SELF_IMPROVEMENT_SYSTEM.md  TASK_DISTRIBUTION_SYSTEM.md  TITLE_SYNC_ANALYSIS.md  USER_INSTRUCTIONS_SUMMARY.md  UX_REVOLUTION_FRAMEWORK.md  accurate-status-system.sh  comprehensive-control-hub.sh  dynamic-role-system.sh  error-database.json  error-learning.json  (+26 more)
(+530 files in other folders)
