[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-control-rules-template"
version = "1.0.0"
description = "AI Behavior Control Rules - Portable Template"
authors = [{name = "AI Control Team", email = "team@ai-control.example"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ai-control/rules-template"
Repository = "https://github.com/ai-control/rules-template"
Documentation = "https://ai-control.github.io/rules-template"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-setup = "scripts.setup:main"
ai-deploy = "scripts.deploy:main"
ai-validate = "scripts.validate:main"

[tool.ai-control]
template_mode = true
portable = true
min_python_version = "3.8"
target_environments = ["dev", "staging", "prod"]

[tool.ai-control.directories]
source = "src"
tests = "tests"  
docs = "docs"
config = "config"
scripts = "scripts"
data = "data"
models = "models"
ops = "ops"
runtime = "runtime"

[tool.ai-control.rules]
max_root_files = 5
max_root_dirs = 9
require_readme = true
require_gitignore = true
